--- a/paper/htp-amia.bib
+++ b/paper/htp-amia.bib
@@ -30,6 +30,22 @@
   publisher={Elsevier}
 }
 
+@article{behilngquality,
+  title={Quality Data Model Based Health Quality Measures Format (eMeasure) Implementation Guide, Release 1 (US Realm) Based on HL7 HQMF Release 2.0},
+  author={Behilng, Diana and Davis, Didi and Sherman, Gennady and Fitzmaurice, J Michael and Klann, Jeffrey and Steele, Julie and Mallampalli, Jyothi and Lang,
+}
+
+@article{dean2008mapreduce,
+  title={MapReduce: simplified data processing on large clusters},
+  author={Dean, Jeffrey and Ghemawat, Sanjay},
+  journal={Communications of the ACM},
+  volume={51},
+  number={1},
+  pages={107--113},
+  year={2008},
+  publisher={ACM}
+}
+
 @article{pathak2013normalization,
   title={Normalization and standardization of electronic health records for high-throughput phenotyping: the SHARPn consortium},
   author={Pathak, Jyotishman and Bailey, Kent R and Beebe, Calvin E and Bethard, Steven and Carrell, David S and Chen, Pei J and Dligach, Dmitriy and Endle, Cory M and Hart, Lacey A and Haug, Peter J and others},
@@ -59,11 +75,6 @@
   pages={37--44},
   year={2009},
   organization={ACM}
-}
-
-@article{behilngquality,
-  title={Quality Data Model Based Health Quality Measures Format (eMeasure) Implementation Guide, Release 1 (US Realm) Based on HL7 HQMF Release 2.0},
-  author={Behilng, Diana and Davis, Didi and Sherman, Gennady and Fitzmaurice, J Michael and Klann, Jeffrey and Steele, Julie and Mallampalli, Jyothi and Lang, Lisa and Harr, Maria and Michaels, Maria and others}
 }
 
 @inproceedings{thompson2012evaluation,
@@ -106,11 +117,6 @@
   pages={988},
   year={2012},
   organization={American Medical Informatics Association}
-}
-
-@article{behilngquality,
-  title={Quality Data Model Based Health Quality Measures Format (eMeasure) Implementation Guide, Release 1 (US Realm) Based on HL7 HQMF Release 2.0},
-  author={Behilng, Diana and Davis, Didi and Sherman, Gennady and Fitzmaurice, J Michael and Klann, Jeffrey and Steele, Julie and Mallampalli, Jyothi and Lang, Lisa and Harr, Maria and Michaels, Maria and others}
 }
 
 @article{garlan1993introduction,
@@ -176,3 +182,19 @@
   publisher={Singapore}
 }
 
+@Misc{cts2,
+        title = {Common Terminology Services 2 {(CTS2)} },
+        year = 2012,
+        mon = nov,
+        key = "cts2",
+        Howpublished = {http://www.omg.org/spec/CTS2/1.0}
+}
+
+@incollection{tao2013phenotyping,
+  title={Phenotyping on EHR data using OWL and semantic web technologies},
+  author={Tao, Cui and Li, Dingcheng and Shen, Feichen and Lian, Zonghui and Pathak, Jyotishman and Liu, Hongfang and Chute, Christopher G},
+  booktitle={Smart Health},
+  pages={31--32},
+  year={2013},
+  publisher={Springer}
+}
