--- a/paper/htp-amia.tex
+++ b/paper/htp-amia.tex
@@ -9,14 +9,12 @@
 \usepackage{booktabs} 
 \usepackage{longtable}
 
-%\MakeRobust{\CALL}
-
 \begin{document}
 
 \title{High Throughput Phenotyping -- Architectural Review}
 
 \author{ 
-     Kevin Peterson
+     ....
 }
 
 \institutes{
@@ -33,11 +31,9 @@
 The Strategic Health IT Advanced Research Projects (SHARP) Program established a platform for analyzing normalized clinical patient data\cite{pathak2013normalization,rea2012building}. The SHARP project focuses on many facets of patient data analytics, such as data normalization (in terms of semantics as well as structure), as well as a standards based focus. For this work, we focus on an important aspect of this technological stack, the computation engine.
 
 \subsection*{Algorithm Repository}
-
+//todo
 \section*{Related Work}
-
 \subsection*{I2B2}
-
 \subsection*{Eureka}
 
 \section*{Methods}
@@ -54,7 +50,7 @@ In order to better understand the intent and function of the system, we have ide
 
 \textbf{Principle 2: Testability}\\
 \textbf{Statement:} System results should be verifiable, repeatable, and comparable to standard, curated data sets.\\
-\textbf{Rational:} Phenotyping occurs in many domains, and although there are efforts to automate the process\cite{chung2008automated,kyzar2011towards}, in many instances it remains a manual, human-driven process. This presents a system testing problem, as it may be difficult to determine acceptable system outputs. It is important, therefore, that a subject matter expert curated test data set be available, and that the test infrastructure incorporate this such that testing is automated and repeatable.\\
+\textbf{Rational:} Phenotyping occurs in many domains, and although there are efforts to automate the process\cite{chung2008automated,kyzar2011towards}, in many instances it remains a manual, human-driven process\cite{tao2013phenotyping}. This presents a system testing problem, as it may be difficult to determine acceptable system outputs. It is important, therefore, that a subject matter expert curated test data set be available, and that the test infrastructure incorporate this such that testing is automated and repeatable.\\
 \textbf{Implications:} Testing infrastructure will need to accommodate the automation of these test data sets. This also will require reporting processes available to clearly demonstrate test results.
 
 \textbf{Principle 3: Adaptability}\\
@@ -72,14 +68,15 @@ In order to better understand the intent and function of the system, we have ide
 The architectual style of the HTP execution engine is largely \textit{pipe and filter} based. In this style, input data is transformed via several discrete components in a streaming fashion, creating an information flow through the system which ultimately leads to the desired output\cite{garlan1993introduction}. One of the main benefits of this style is the strong separation of concerns of the components. Components need not know implementation details of each other -- and furthermore, need not even be aware of any other component, save those immediately adjacent to them in the pipeline. This implementation is possible via our Architectural Principle 1 - \textit{Standards Based} design, as components will have explicit and standardized contracts.
 
 \subsection*{System Components}
-\subsubsection*{QDM XML to JSON Transformation}
-The QDM XML to JSON transformation component parses the QDM XML representation and transforms it into easily parsable JSON. This functionality is exposed via a REST service wrapping the Project Cypress health-data-standards\footnote{https://github.com/projectcypress/health-data-standards} project.
+\subsubsection*{QDM XML to JSON Transformer}
+The QDM XML to JSON transformation component parses the QDM XML representation and transforms it into easily parsable JSON. This functionality is exposed via a REST service wrapping the Project Cypress health-data-standards\footnote{https://github.com/projectcypress/health-data-standards} project. This component is a Ruby\footnote{https://www.ruby-lang.org/en/} based component, and represents the only non Java Virtual Machine (JVM) component of the architecture.
 
 \subsubsection*{JSON to JBoss Drools Compiler}
-The QDM JSON representation is programatically transformed into executable JBoss Drools rules by a compiler. The result of this transformation is a single Drools Rules file that can be executed by the Drools Engine, or other JBoss Drools environment.
+The QDM JSON representation is programatically transformed into executable JBoss Drools rules via a compilation process. The result of this transformation is a single Drools Rules file that can be executed by the Drools Engine, or other JBoss Drools environment. The compilation component is based on the Groovy\footnote{http://groovy.codehaus.org/} language, as Groovy provides templating and string interpolation functionality that is difficult to replicate in Java.
 
 \subsubsection*{Drools Execution Engine}
-Using the JBoss Drools engine, the generated Drools Rules can be executed given an input patient set. The result of this execution will be the patent set result mapped to the given populations (such as NUMER, DENOM, etc).
+Using the JBoss Drools engine, the generated Drools Rules can be executed given an input patient set. The result of this execution will be the patent set result mapped to the given populations (such as NUMER, DENOM, etc). A thin interface facade was created over the JBoss Drools version 5.6.0.Final library, hiding the implementation details of the engine. There are, in fact, no Drools-related APIs exposed to the client -- so the Drools-based implementation is decoupled from the user-facing APIs. This was done to allow flexibility in implementation, especially looking forward to moving to a Drools 6.x based implementation.\\
+The interface \texttt{edu.mayo.qdm.executor.Executor} is the main entry-point for user interaction. It is through this interface that the engine can be started, and patient data processed. This interface accepts an \texttt{Iterable} collection of patients as input, allowing for user-specific implementations of patient \texttt{Iterators}. Because of this, users may hide implementation details behind the \texttt{Iterator} interface, allowing for a wide variety of data extraction techniques. For example, a patient \texttt{Iterator} may be implemented by a database result set, with custom cursors and pagination tailored to the specific database and environment. In fact, the \texttt{Iterator} need not be implemented based on persisted data at all -- but rather accept outputs from a streaming API or another analytics package.
 
 \subsubsection*{ValueSet Processor}
 QDM Data Elements semantically defined their intended criteria by using \textit{Value Sets}, or enumerated sets of coded concepts from standard vocabularies. For instance,\\
@@ -99,6 +96,8 @@ For the purposes of algorithm execution, a mechanism for resolving the enumerate
 \end{algorithmic}
 \end{algorithm}
 
+Furthermore, it is necessary to find the subset of coded entries that align semantically with a defined  \textit{Value Set}. Extending the above example, it may be necessary to identify all Diagnoses in a patient record that align with the \textit{2.16.840.1.113883.3.464.1003.102.12.1011} Value Set in order to do further processing or filtering, such as temporal relations. This function, described below, comprises the second point of functionality for the ValueSet Processor.
+
 \begin{algorithm}
 \begin{algorithmic}[1]
 \Procedure{find\_matches}{oid, coded\_elements}
@@ -108,13 +107,29 @@ For the purposes of algorithm execution, a mechanism for resolving the enumerate
 \end{algorithmic}
 \end{algorithm}
 
-
 \subsection*{Standards and Models}
 \subsection*{QDM/HQMF}
 The Quality Data Model (QDM)\cite{behilngquality}...
-\subsection*{QDM JSON}
+\subsection*{CTS2}
+Common Terminology Services 2\cite{cts2} is on Object Management Group{\textsuperscript{\textregistered}} (OMG) terminology services specification. This standard defines a common data model and interface for interacting with a terminology service, including read/write access and various maintenance, content loading, and querying functionality. CTS2 is the recommended implementation of the \textit{ValueSet Processor}, and can be easily incorporated via the provided adapter.
 
 \subsection*{Map Reduce}
+Map Reduce is computational abstraction designed to allow for easier parallelization and distribution of large data sets for processing\cite{dean2008mapreduce}. The computation is a two-step process, consisting of a \textit{map} function followed by a \textit{reduce} function. The \textit{map} function, given in input, divides this input into smaller sub-problems which then are consolidated by the \textit{reduce} function. Consider the example in figure~\ref{fig:map_reduce_example}, where the average height for a given age is calculated. The \textit{map} function iterates over the data collection, emitting for each record the age and height. This is then consolidated by the \textit{reduce} function, which given each key (or, each \textit{age}), computes the average height for that age.
+
+\begin{figure}[H]
+\begin{verbatim}
+  map(String file, List children):
+    for each child in children:
+    	emit(child.age, children.height);
+
+  reduce(String age, Iterator heights):
+    emit(age, average(heights))
+\end{verbatim}
+\caption{Map Reduce Algorithm Example} 
+\label{fig:map_reduce_example}
+\end{figure}
+
+We can apply this concept in the context of patients and populations. In the \textit{map} function, a function is applied to classify each patient into the appropriate populations given a phenotyping algorithm. We then reduce each population (and its given set of patients) into some analytic result -- for instance, analyzing demographic characteristics or creating patient lists for studies and clinical trials. Figure~\ref{fig:map_reduce_htp} illustrates this algorithm:
 
 \begin{figure}[H]
 \begin{verbatim}
@@ -128,16 +143,16 @@ The Quality Data Model (QDM)\cite{behilngquality}...
   reduce(String population, Iterator patients):
     // key: a population
     // values: a list of patients
-    emit(postprocess(result))
+    emit(population, postprocess(result))
 \end{verbatim}
 \caption{High Level Map Reduce Algorithm} 
-\label{fig:map_reduce}
+\label{fig:map_reduce_htp}
 \end{figure}
 
+Figure~\ref{fig:map_reduce_htp} illustrates the general flow of information through the phenotyping algorithm. The \textit{getPopulations} function encompass the actual algorithm execution logic -- in our case, the \textit{Drools Execution Engine} component. The \textit{postprocess} function in the \textit{reduce} portion is left to be implemented by the client, as this will be use-case dependent. The code base does include a basic demographics analytics post processor, but it is expected that clients will extend it to meet their needs, or substitute their own processing entirely.
+
 \subsection*{Clustering}
-
 We follow the Hadoop clustering registration model\cite{wang2009hadoop}. The main advantage of this approach is that the master node does not need a priori knowledge of the number or location of the worker nodes. Using this approach, the master node, will accept incoming registration requests from worker nodes. These worker registration requests will include network location of the sending worker, which the master node then stores.
-
 
 \subsection*{Usage Scenario - \textit{Aspirin Prescribed at Discharge - (0142)}}
 To examine the functional capabilities of the system, we propose a prototypical usage scenario involving the NQF 0142 \textit{Aspirin Prescribed at Discharge} algorithm. Figure \ref{fig:0142_IPP_text} shows the Initial Patient Population (IPP) definition of this algorithm in human-readable text format.
@@ -212,7 +227,7 @@ The first step in this process is to convert the XML representation in figure~\r
 
 
 \begin{figure}[H]
-\begin{minted}{java}
+\begin{verbatim}
 IPP": {
     "conjunction?": true,
     "type": "IPP",
@@ -224,26 +239,26 @@ IPP": {
         "preconditions": [
         {
             "id": 46,
-            "reference": "DiagnosisActiveHospitalMeasuresAmi_precondition_46"
+            "reference": "DiagnosisActiveHospitalMeasures...46"
         },
         {
             "id": 48,
-            "reference": "PatientCharacteristicBirthdateBirthDate_precondition_48"
+            "reference": "PatientCharacteristicBirthdate...48"
         },
         {
             "id": 50,
-            "reference": "OccurrenceAHospitalMeasuresEncounterInpatient1_precondition_50"
+            "reference": "OccurrenceAHospitalMeasuresEncounterInpatient...50"
         },
         {
             "id": 52,
-            "reference": "OccurrenceAHospitalMeasuresEncounterInpatient1_precondition_52"
+            "reference": "OccurrenceAHospitalMeasuresEncounterInpatient...52"
         }
         ],
         "conjunction_code": "allTrue"
     }
     ]
 }
-\end{minted}
+\end{verbatim}
 \caption{NQF 0142 JSON Representation} 
 \label{fig:0142_IPP_JSON}
 \end{figure}
@@ -293,7 +308,7 @@ end
 \label{fig:drools_precondition_groupings}
 \end{figure}
 
-Many QDM algorithms rely heavily on boolean logic as part of the algorithm. This is represented as AND/OR groupings of preconditions. This is expressed in Drools by checking for the existence of \textit{PreconditionResult}s in working memory. Figure~\ref{fig:drools_precondition_groupings} illustrates this concept by specifying an \textbf{AND} grouping. By checking for the existence of these \textit{PreconditionResult}s in working memory, we can assert whether or not precondition ``54'' is satisfied. The Drools execution engine, using the Rete algorithm, assures the order of activation of these nested rules, firing them only when the necessary \textit{PreconditionResult}s are available in working memory\cite{forgy1982rete}.
+Many QDM algorithms rely heavily on boolean logic to specify the desired patient characteristics. This is represented in the algorithm as AND/OR groupings of preconditions. In Drools, this logic is implemented by checking for the existence of \textit{PreconditionResult}s in working memory. Figure~\ref{fig:drools_precondition_groupings} illustrates this concept by specifying an \textbf{AND} grouping. By checking for the existence of these \textit{PreconditionResult}s in working memory, we can assert whether or not precondition ``54'' is satisfied. The Drools execution engine, using the Rete algorithm, assures the order of activation of these nested rules, firing them only when the necessary \textit{PreconditionResult}s are available in working memory\cite{forgy1982rete}.
 
 
 \begin{figure}[H]
@@ -345,6 +360,8 @@ Project Cypress\footnote{http://projectcypress.org/} was used as the testing ora
 
 
 \subsection*{Performance (Execution Time)}
+Scalability and performance are important aspects of the HTP architecture, and the ability to efficiently process large patient sets is critical. We hypothesize that because of the Drools-based implementation and the efficiencies of the RETE algorithm, the elapsed time required to analyze a patient set will increase linearly compared the number of total patients. Examining this hypothesis requires several preconditions - first, a large de-identified patient set ($> 300,000$ patients with attendant health record data). Next, a mechanism to verify the execution results of the former is required to ensure a valid test environment. Finally, a mechanism to record timing results of each run is necessary.\\
+
 
 \subsection*{Performance (Verification)}
 Verification was performed using the Project Cypress\footnote{http://projectcypress.org/} verification framework.
@@ -414,13 +431,13 @@ every last row/.style={after row=\bottomrule}
 \subsection*{Future Work}
 \subsection*{Summary and Limitations}
 
-
 ...
+
 
 \clearpage
 
 % unstr is used to keep citation order
-\bibliographystyle{unsrt}
+\bibliographystyle{plain}
 \bibliography{htp-amia}  
 
 \end{document}
